# megatech-vulkan

./: .clangd  .gitmodules  Doxyfile  README.md  meson.build  meson.options  requirements.txt
documentation/: namespaces.dox
examples/: initialization.cpp  meson.build
include/megatech/: vulkan.hpp
include/megatech/vulkan/: application_description.hpp  bitmask.hpp  command.hpp  command_tags.hpp  concepts.hpp  debug_messenger_description.hpp  defs.hpp  device.hpp  error.hpp  instance.hpp  layer_description.hpp  loader.hpp  physical_devices.hpp  version.hpp  window_system.hpp
include/megatech/vulkan/adaptors/: libvulkan.hpp
include/megatech/vulkan/adaptors/libvulkan/: device.hpp  instance.hpp  loader.hpp
include/megatech/vulkan/adaptors/libvulkan/internal/base/: device_impl.hpp  instance_impl.hpp  loader_function_builder.hpp  loader_impl.hpp
include/megatech/vulkan/concepts/: builder_object.hpp  child_object.hpp  command_tag.hpp  handle_owner.hpp  opaque_object.hpp  vulkan_function.hpp
include/megatech/vulkan/internal/: base.hpp  tag.hpp
include/megatech/vulkan/internal/base/: device_impl.hpp  fnv_1a.hpp  instance_impl.hpp  layer_description_proxy.hpp  layer_settings_builder.hpp  loader_impl.hpp  physical_device_allocator.hpp  physical_device_description_impl.hpp  physical_device_validator.hpp  vulkandefs.hpp  window_system_impl.hpp
loaders/: meson.build
loaders/libvulkan/: meson.build
loaders/libvulkan/documentation/: namespaces.dox
loaders/libvulkan/include/megatech/vulkan/loaders/: libvulkan.hpp
loaders/libvulkan/include/megatech/vulkan/loaders/libvulkan/: loader.hpp
loaders/libvulkan/include/megatech/vulkan/loaders/libvulkan/internal/base/: loader_impl.hpp
loaders/libvulkan/src/megatech/vulkan/loaders/libvulkan/: loader.cpp
loaders/libvulkan/src/megatech/vulkan/loaders/libvulkan/internal/base/: loader_impl.cpp
loaders/libvulkan/tests/: meson.build  test_device.cpp  test_instance.cpp  test_loader.cpp
plugins/: meson.build
plugins/libvulkan/: meson.build
plugins/libvulkan/include/megatech/vulkan/plugins/: libvulkan.hpp
plugins/libvulkan/include/megatech/vulkan/plugins/libvulkan/: loader.hpp
plugins/libvulkan/include/megatech/vulkan/plugins/libvulkan/internal/base/: loader_impl.hpp
plugins/libvulkan/src/megatech/vulkan/plugins/libvulkan/: loader.cpp
plugins/libvulkan/src/megatech/vulkan/plugins/libvulkan/internal/base/: loader_impl.cpp
plugins/libvulkan/tests/: meson.build  test_loader.cpp
src/megatech/vulkan/: application_description.cpp  debug_messenger_description.cpp  device.cpp  error.cpp  instance.cpp  layer_description.cpp  loader.cpp  physical_devices.cpp  version.cpp  window_system.cpp
src/megatech/vulkan/adaptors/libvulkan/: device.cpp  instance.cpp  loader.cpp
src/megatech/vulkan/adaptors/libvulkan/internal/base/: device_impl.cpp  instance_impl.cpp  loader_function_builder.cpp  loader_impl.cpp
src/megatech/vulkan/internal/base/: device_impl.cpp  instance_impl.cpp  layer_settings_builder.cpp  loader_impl.cpp  physical_device_allocator.cpp  physical_device_description_impl.cpp  physical_device_validator.cpp  window_system_impl.cpp
tests/: meson.build
tests/libvulkan/: meson.build  test_device.cpp  test_instance.cpp  test_loader.cpp
